[package]
name = "eggs-online"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "dumb_client"
path = "src/dumb_client.rs"

[[bin]]
name = "start_server"
path = "src/start_server.rs"


[dependencies]
crossbeam = { version = "0.8.2", features = ["crossbeam-queue"] }
glam = {version="0.24.2", features=["serde"]}
lazy_static = "1.4.0"
legion = "0.4.0"
raylib = "3.7.0"
serde = {version="1.0.188", features=["derive"]}
serde_json = "1.0.107"
tokio = {version="1.32.0", features=["net", "io-util", "full"]}
